@@ -18,7 +18,6 @@ import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.Map;
-
 import edu.wustl.catissuecore.actionForm.CollectionProtocolForm;
 import edu.wustl.catissuecore.bean.ConsentBean;
 import edu.wustl.catissuecore.util.CollectionProtocolUtil;
@@ -30,7 +29,8 @@ import edu.wustl.common.util.MapDataParser;
 import edu.wustl.common.util.logger.Logger;
 
 /**
- * A set of written procedures that describe how a biospecimen is prospectively collected.
+ * A set of written procedures that describe how a biospecimen is prospectively
+ * collected.
  * @hibernate.joined-subclass table="CATISSUE_COLLECTION_PROTOCOL"
  * @hibernate.joined-subclass-key column="IDENTIFIER"
  * @author Mandar Deshmukh
@@ -44,8 +44,8 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	private static final long serialVersionUID = 1234567890L;
 
 	/**
-	 * Patch Id : Collection_Event_Protocol_Order_3 (Changed From HashSet to LinkedHashSet)
-	 * Description : To get the specimen requirement in order
+	 * Patch Id : Collection_Event_Protocol_Order_3 (Changed From HashSet to
+	 * LinkedHashSet) Description : To get the specimen requirement in order
 	 */
 	/**
 	 * Collection of studies associated with the CollectionProtocol.
@@ -58,12 +58,14 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	protected Collection coordinatorCollection = new LinkedHashSet();
 
 	/**
-	 * Collection of CollectionProtocolEvents associated with the CollectionProtocol.
+	 * Collection of CollectionProtocolEvents associated with the
+	 * CollectionProtocol.
 	 */
 	protected Collection collectionProtocolEventCollection = new LinkedHashSet();
 
 	/**
-	 *  Collection of CollectionProtocol associated with the Parent CollectionProtocol.
+	 * Collection of CollectionProtocol associated with the Parent
+	 * CollectionProtocol.
 	 */
 	protected Collection<CollectionProtocol> childCollectionProtocolCollection =
 		new LinkedHashSet<CollectionProtocol>();
@@ -91,9 +93,9 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	 */
 	protected Boolean aliquotInSameContainer;
 
-	//protected Collection storageContainerCollection=new HashSet();
+	// protected Collection storageContainerCollection=new HashSet();
 
-	//-----For Consent Tracking. Ashish 22/11/06
+	// -----For Consent Tracking. Ashish 22/11/06
 	/**
 	 * The collection of consent tiers associated with the collection protocol.
 	 */
@@ -106,27 +108,28 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	/**
 	 * whether consents are waived?
 	 */
-	protected Boolean consentsWaived = new Boolean(false);
+	protected Boolean consentsWaived = Boolean.FALSE;
 
 	/**
-     * A collection of registration of a Participant to a Collection Protocol.
-     * */
+	 * A collection of registration of a Participant to a Collection Protocol.
+	 * 
+	 */
 	protected Collection collectionProtocolRegistrationCollection = new HashSet();
 
 	/**
-	 * 
+	 * assignedProtocolUserCollection.
 	 */
 	protected Collection<User> assignedProtocolUserCollection = new HashSet<User>();
 
 	/**
-	 * 
+	 * siteCollection.
 	 */
 	protected Collection<Site> siteCollection = new HashSet<Site>();
 
 	/**
 	 * @return the unsignedConsentDocumentURL
 	 * @hibernate.property name="unsignedConsentDocumentURL" type="string"
-	 * length="1000" column="UNSIGNED_CONSENT_DOC_URL"
+	 *                     length="1000" column="UNSIGNED_CONSENT_DOC_URL"
 	 */
 	public String getUnsignedConsentDocumentURL()
 	{
@@ -134,7 +137,8 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	}
 
 	/**
-	 * @param unsignedConsentDocumentURL the unsignedConsentDocumentURL to set
+	 * @param unsignedConsentDocumentURL
+	 *            the unsignedConsentDocumentURL to set
 	 */
 	public void setUnsignedConsentDocumentURL(String unsignedConsentDocumentURL)
 	{
@@ -143,11 +147,12 @@ public class CollectionProtocol extends SpecimenProtocol implements
 
 	/**
 	 * @return the consentTierCollection
-	 * @hibernate.collection-one-to-many class="edu.wustl.catissuecore.domain.ConsentTier"
-	 * cascade="save-update" lazy="true"
-	 * @hibernate.set table="CATISSUE_CONSENT_TIER" inverse="false" name="consentTierCollection"
+	 * @hibernate.collection-one-to-many
+	 *                                   class="edu.wustl.catissuecore.domain.ConsentTier"
+	 *                                   cascade="save-update" lazy="true"
+	 * @hibernate.set table="CATISSUE_CONSENT_TIER" inverse="false"
+	 *                name="consentTierCollection"
 	 * @hibernate.collection-key column="COLL_PROTOCOL_ID"
-	 * @return collection of consent tier type.
 	 */
 	public Collection<ConsentTier> getConsentTierCollection()
 	{
@@ -155,16 +160,19 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	}
 
 	/**
-	 * @param consentTierCollection the consentTierCollection to set
+	 * @param consentTierCollection
+	 *            the consentTierCollection to set
 	 */
 	public void setConsentTierCollection(Collection<ConsentTier> consentTierCollection)
 	{
 		this.consentTierCollection = consentTierCollection;
 	}
-	//-----Consent Tracking End
+
+	// -----Consent Tracking End
 
 	/**
-	 * NOTE: Do not delete this constructor. Hibernet uses this by reflection API.
+	 * NOTE: Do not delete this constructor. Hibernet uses this by reflection
+	 * API.
 	 * */
 	public CollectionProtocol()
 	{
@@ -173,8 +181,9 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	}
 
 	/**
-	 *
-	 * @param form This is abstract action form
+	 * Parameterized Constructor.
+	 * @param form
+	 *            This is abstract action form
 	 */
 	public CollectionProtocol(AbstractActionForm form)
 	{
@@ -183,10 +192,13 @@ public class CollectionProtocol extends SpecimenProtocol implements
 
 	/**
 	 * Returns the collection of Studies for this Protocol.
-	 * @hibernate.set name="distributionProtocolCollection" table="CATISSUE_COLL_DISTRIBUTION_REL" 
-	 * cascade="save-update" inverse="false" lazy="false"
+	 * @hibernate.set name="distributionProtocolCollection"
+	 *                table="CATISSUE_COLL_DISTRIBUTION_REL"
+	 *                cascade="save-update" inverse="false" lazy="false"
 	 * @hibernate.collection-key column="COLLECTION_PROTOCOL_ID"
-	 * @hibernate.collection-many-to-many class="edu.wustl.catissuecore.domain.DistributionProtocol" column="DISTRIBUTION_PROTOCOL_ID"
+	 * @hibernate.collection-many-to-many class="edu.wustl.catissuecore.domain.
+	 *                                    DistributionProtocol
+	 *                                    " column="DISTRIBUTION_PROTOCOL_ID"
 	 * @return Returns the collection of Studies for this Protocol.
 	 */
 	public Collection getDistributionProtocolCollection()
@@ -195,7 +207,8 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	}
 
 	/**
-	 * @param studyCollection The studyCollection to set.
+	 * @param distributionProtocolCollection
+	 *            The studyCollection to set.
 	 */
 	public void setDistributionProtocolCollection(Collection distributionProtocolCollection)
 	{
@@ -204,10 +217,13 @@ public class CollectionProtocol extends SpecimenProtocol implements
 
 	/**
 	 * Returns the collection of Users(ProtocolCoordinators) for this Protocol.
-	 * @hibernate.set name="coordinatorCollection" table="CATISSUE_COLL_COORDINATORS"
-	 * cascade="none" inverse="false" lazy="false"
+	 * @hibernate.set name="coordinatorCollection"
+	 *                table="CATISSUE_COLL_COORDINATORS" cascade="none"
+	 *                inverse="false" lazy="false"
 	 * @hibernate.collection-key column="COLLECTION_PROTOCOL_ID"
-	 * @hibernate.collection-many-to-many class="edu.wustl.catissuecore.domain.User" column="USER_ID"
+	 * @hibernate.collection-many-to-many
+	 *                                    class="edu.wustl.catissuecore.domain.User"
+	 *                                    column="USER_ID"
 	 * @return The collection of Users(ProtocolCoordinators) for this Protocol.
 	 */
 	public Collection getCoordinatorCollection()
@@ -216,7 +232,8 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	}
 
 	/**
-	 * @param coordinatorCollection The coordinatorCollection to set.
+	 * @param coordinatorCollection
+	 *            The coordinatorCollection to set.
 	 */
 	public void setCoordinatorCollection(Collection coordinatorCollection)
 	{
@@ -226,10 +243,11 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	/**
 	 * Returns the collection of CollectionProtocolEvents for this Protocol.
 	 * @hibernate.set name="collectionProtocolEventCollection"
-	 * table="CATISSUE_COLL_PROT_EVENT" cascade="save-update"
-	 * inverse="true" lazy="false"
+	 *                table="CATISSUE_COLL_PROT_EVENT" cascade="save-update"
+	 *                inverse="true" lazy="false"
 	 * @hibernate.collection-key column="COLLECTION_PROTOCOL_ID"
-	 * @hibernate.collection-one-to-many class="edu.wustl.catissuecore.domain.CollectionProtocolEvent"
+	 * @hibernate.collection-one-to-many
+	 *                                   class="edu.wustl.catissuecore.domain.CollectionProtocolEvent"
 	 * @return The collection of CollectionProtocolEvents for this Protocol.
 	 */
 	public Collection getCollectionProtocolEventCollection()
@@ -239,7 +257,7 @@ public class CollectionProtocol extends SpecimenProtocol implements
 
 	/**
 	 * @param collectionProtocolEventCollection
-	 * The collectionProtocolEventCollection to set.
+	 *            The collectionProtocolEventCollection to set.
 	 */
 	public void setCollectionProtocolEventCollection(Collection collectionProtocolEventCollection)
 	{
@@ -247,11 +265,15 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	}
 
 	/**
-	 * Returns collection of collection protocol registrations of this collection protocol.
-	 * @return collection of collection protocol registrations of this collection protocol.
-	 * @hibernate.set name="collectionProtocolRegistrationCollection" table="CATISSUE_COLL_PROT_REG"
+	 * Returns collection of collection protocol registrations of this
+	 * collection protocol.
+	 * @return collection of collection protocol registrations of this
+	 *         collection protocol.
+	 * @hibernate.set name="collectionProtocolRegistrationCollection"
+	 *                table="CATISSUE_COLL_PROT_REG"
 	 * @hibernate.collection-key column="COLLECTION_PROTOCOL_ID"
-	 * @hibernate.collection-one-to-many class="edu.wustl.catissuecore.domain.CollectionProtocolRegistration"
+	 * @hibernate.collection-one-to-many
+	 * class="edu.wustl.catissuecore.domain.CollectionProtocolRegistration"
 	 * @see setCollectionProtocolRegistrationCollection(Collection)
 	 */
 	public Collection getCollectionProtocolRegistrationCollection()
@@ -262,8 +284,9 @@ public class CollectionProtocol extends SpecimenProtocol implements
 
 	/**
 	 * Sets the collection protocol registrations of this participant.
-	 * @param protocolRegistrationCollection collection of collection protocol
-	 * registrations of this participant.
+	 * @param collectionProtocolRegistrationCollection
+	 *            collection of collection protocol registrations of this
+	 *            participant.
 	 * @see #getCollectionProtocolRegistrationCollection()
 	 */
 	public void setCollectionProtocolRegistrationCollection(Collection
@@ -271,217 +294,259 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	{
 		this.collectionProtocolRegistrationCollection = collectionProtocolRegistrationCollection;
 	}
+
 	/*
 	 * Returns the collection of Containers for this Protocol.
-	 * @hibernate.set name="storageContainerCollection" table="CATISSUE_CONTAINER_CP_REL"
-	 * cascade="none" inverse="false" lazy="false"
+	 * @hibernate.set name="storageContainerCollection"
+	 * table="CATISSUE_CONTAINER_CP_REL" cascade="none" inverse="false"
+	 * lazy="false"
 	 * @hibernate.collection-key column="COLLECTION_PROTOCOL_ID"
 	 * @hibernate.collection-many-to-many class="edu.wustl.catissuecore.domain.
 	 * StorageContainer" column="STORAGE_CONTAINER_ID"
-	 * @return The collection of Storage Containers for this Protocol.*/
-	 /*
-	public Collection getStorageContainerCollection()
-	{
-		return storageContainerCollection;
-	}
-*/
+	 * @return The collection of Storage Containers for this Protocol.
+	 */
+	/*
+	 * public Collection getStorageContainerCollection() { return
+	 * storageContainerCollection; }
+	 */
 	/*
 	 * @param storageContainerCollection The storageContainerCollection to set.
 	 */
-	/*public void setStorageContainerCollection(Collection storageContainerCollection)
-	{
-		this.storageContainerCollection = storageContainerCollection;
-	}*/
+	/*
+	 * public void setStorageContainerCollection(Collection
+	 * storageContainerCollection) { this.storageContainerCollection =
+	 * storageContainerCollection; }
+	 */
 
 	/**
-     * This function Copies the data from an CollectionProtocolForm object to a CollectionProtocol object.
-     * @param abstractForm An CollectionProtocolForm object containing the 
-     * information about the CollectionProtocol.  
-     */
-    public void setAllValues(IValueObject abstractForm)
-    {
-        try
-        {
-        	super.setAllValues(abstractForm);
+	 * This function Copies the data from an CollectionProtocolForm object to a
+	 * CollectionProtocol object.
+	 * @param abstractForm An CollectionProtocolForm object containing the information
+	 * about the CollectionProtocol.
+	 */
+	public void setAllValues(IValueObject abstractForm)
+	{
+		try
+		{
+			super.setAllValues(abstractForm);
+			final CollectionProtocolForm cpForm = (CollectionProtocolForm) abstractForm;
 
-        	final CollectionProtocolForm cpForm = (CollectionProtocolForm) abstractForm;
+			coordinatorCollection.clear();
+			siteCollection.clear();
+			this.collectionProtocolEventCollection.clear();
+			long[] coordinatorsArr = cpForm.getProtocolCoordinatorIds();
+			addUserToCoordinatorCollection(coordinatorsArr);
 
-        	coordinatorCollection.clear();
-        	siteCollection.clear();
-        	this.collectionProtocolEventCollection.clear();
-        	long [] coordinatorsArr = cpForm.getProtocolCoordinatorIds();
-        	if(coordinatorsArr!=null)
-        	{
-	        	for (int i = 0; i < coordinatorsArr.length; i++)
+			long[] siteArr = cpForm.getSiteIds();
+			addSiteToSiteCollection(siteArr);
+			aliquotInSameContainer = Boolean.valueOf(cpForm.isAliqoutInSameContainer());
+			final Map map = cpForm.getValues();
+
+			/**
+			 * Name : Abhishek Mehta Reviewer Name : Poornima Bug ID:
+			 * Collection_Event_Protocol_Order Patch ID:
+			 * Collection_Event_Protocol_Order_1 See also: 1-8 Description: To
+			 * get the collection event protocols in their insertion order.
+			 */
+			Logger.out.debug("PRE FIX MAP " + map);
+			final Map sortedMap = sortMapOnKey(map);
+			Logger.out.debug("POST FIX MAP " + map);
+
+			final MapDataParser parser = new MapDataParser("edu.wustl.catissuecore.domain");
+
+			final ArrayList cpecList = (ArrayList) parser.generateData(sortedMap, true);
+			for(int i = 0; i < cpecList.size(); i++)
+			{
+				this.collectionProtocolEventCollection.add(cpecList.get(i));
+			}
+			Logger.out.debug("collectionProtocolEventCollection " +
+					this.collectionProtocolEventCollection);
+
+			// Setting the unsigned doc url.
+			this.unsignedConsentDocumentURL = cpForm.getUnsignedConsentURLName();
+			// Setting the consent tier collection.
+			this.consentTierCollection = prepareConsentTierCollection(cpForm.getConsentValues());
+
+			consentsWaived = Boolean.valueOf(cpForm.isConsentWaived());
+		}
+		catch (Exception excp)
+		{
+			Logger.out.error(excp.getMessage(), excp);
+		}
+	}
+
+	/**
+	 * This method adds site to a SiteCollection object.
+	 * @param siteArr of Long[] type.
+	 */
+	private void addSiteToSiteCollection(long[] siteArr)
+	{
+		if(siteArr != null)
+		{
+			for(int i = 0; i < siteArr.length; i++)
+			{
+				if(siteArr[i] != -1)
 				{
-	        		if(coordinatorsArr[i]!=-1)
-	        		{
-		        		User coordinator = new User();
-		        		coordinator.setId(new Long(coordinatorsArr[i]));
-		        		coordinatorCollection.add(coordinator);
-	        		}
+					Site site = new Site();
+					site.setId(Long.valueOf(siteArr[i]));
+					siteCollection.add(site);
 				}
-        	}
+			}
+		}
+	}
 
-        	long [] siteArr = cpForm.getSiteIds();
-        	if(siteArr!=null)
-        	{
-	        	for (int i = 0; i < siteArr.length; i++)
+	/**
+	 * This method adds user to Coordinator Collection.
+	 * @param coordinatorsArr of Long [].
+	 */
+	private void addUserToCoordinatorCollection(long[] coordinatorsArr)
+	{
+		if(coordinatorsArr != null)
+		{
+			for(int i = 0; i < coordinatorsArr.length; i++)
+			{
+				if(coordinatorsArr[i] != -1)
 				{
-	        		if(siteArr[i]!=-1)
-	        		{
-		        		Site site = new Site();
-		        		site.setId(new Long(siteArr[i]));
-		        		siteCollection.add(site);
-	        		}
+					User coordinator = new User();
+					coordinator.setId(Long.valueOf(coordinatorsArr[i]));
+					coordinatorCollection.add(coordinator);
 				}
-        	}
-        	aliquotInSameContainer = new Boolean(cpForm.isAliqoutInSameContainer());
-	        final Map map = cpForm.getValues();
+			}
+		}
+	}
 
-	        /**
-	         * Name : Abhishek Mehta
-	         * Reviewer Name : Poornima
-	         * Bug ID: Collection_Event_Protocol_Order
-	         * Patch ID: Collection_Event_Protocol_Order_1
-	         * See also: 1-8
-	         * Description: To get the collection event protocols in their insertion order.
-	         */
-	        Logger.out.debug("PRE FIX MAP "+map);
-	        final Map sortedMap = sortMapOnKey(map);
-	        Logger.out.debug("POST FIX MAP "+map);
-
-	        final MapDataParser parser = new MapDataParser("edu.wustl.catissuecore.domain");
-
-	        final ArrayList cpecList = (ArrayList)parser.generateData(sortedMap,true);
-	        for(int i = 0 ; i < cpecList.size() ; i++)
-	        {
-	        	this.collectionProtocolEventCollection.add(cpecList.get(i));
-	        }
-	        Logger.out.debug("collectionProtocolEventCollection "+this.collectionProtocolEventCollection);
-
-	        //For Consent Tracking ----Ashish 1/12/06
-	        //Setting the unsigned doc url.
-	        this.unsignedConsentDocumentURL = cpForm.getUnsignedConsentURLName();
-	        //Setting the consent tier collection.
-	        this.consentTierCollection = prepareConsentTierCollection(cpForm.getConsentValues());
-
-	        //Mandar : 25-Jan-07
-	        consentsWaived = new Boolean(cpForm.isConsentWaived());
-        }
-        catch (Exception excp)
-        {
-	    	// use of logger as per bug 79
-	    	Logger.out.error(excp.getMessage(),excp);
-        }
-    }
-
-    /**
-     * Patch ID: Collection_Event_Protocol_Order_2
-     * Description: To get the collection event protocols in their insertion order.
-     */
+	/**
+	 * Patch ID: Collection_Event_Protocol_Order_2 Description: To get the
+	 * collection event protocols in their insertion order.
+	 */
 
 	/**
 	 * This function will sort the map based on their keys.
 	 * @param map Map.
 	 * @return LinkedHashMap.
 	 */
-    private LinkedHashMap sortMapOnKey(Map map)
-    {
-    	final Object[] mapKeySet = map.keySet().toArray();
-    	final int size = mapKeySet.length;
-    	ArrayList <String> mList = new ArrayList <String>();
-    	for(int i = 0 ; i < size ; i++)
+	private LinkedHashMap sortMapOnKey(Map map)
+	{
+		final Object[] mapKeySet = map.keySet().toArray();
+		final int size = mapKeySet.length;
+		ArrayList<String> mList = new ArrayList<String>();
+		for(int i = 0; i < size; i++)
 		{
-    		String key = (String)mapKeySet[i];
-    		mList.add(key);
+			String key = (String) mapKeySet[i];
+			mList.add(key);
 		}
 
-    	final KeyComparator keyComparator = new KeyComparator();
+		final KeyComparator keyComparator = new KeyComparator();
 		Collections.sort(mList, keyComparator);
 
-    	LinkedHashMap <String, String> sortedMap = new LinkedHashMap<String, String>();
-		for(int i = 0 ; i < size ; i++)
+		LinkedHashMap<String, String> sortedMap = new LinkedHashMap<String, String>();
+		for(int i = 0; i < size; i++)
 		{
-			String key = (String)mList.get(i);
-			String value = (String)map.get(key);
+			String key = (String) mList.get(i);
+			String value = (String) map.get(key);
 			sortedMap.put(key, value);
 		}
 		return sortedMap;
-    }
+	}
 
-    /**
-     * @param consentTierMap Consent Tier Map
-     * @return consentStatementColl
-     * @throws Exception - Exception
-     */
-    public Collection prepareConsentTierCollection(Map consentTierMap) throws Exception 
-    {
-    	final MapDataParser mapdataParser = new MapDataParser("edu.wustl.catissuecore.bean");
-    	Map consentMap = CollectionProtocolUtil.sortConsentMap(consentTierMap);//bug 8905
-    	final Collection beanObjColl = mapdataParser.generateData(consentMap);//consentTierMap
-    	
-    	//Collection<ConsentTier> consentStatementColl = new HashSet<ConsentTier>();
-    	Collection<ConsentTier> consentStatementColl = new LinkedHashSet<ConsentTier>();//bug 8905
-    	Iterator iter = beanObjColl.iterator();
-    	while(iter.hasNext())
-    	{
-    		ConsentBean consentBean = (ConsentBean)iter.next();
-    		ConsentTier consentTier = new ConsentTier();
-    		consentTier.setStatement(consentBean.getStatement());
-    		//To set ID for Edit case
-    		if(consentBean.getConsentTierID()!=null&&consentBean.getConsentTierID().trim().length()>0)
-    		{
-    			consentTier.setId(Long.parseLong(consentBean.getConsentTierID()));
-    		}
-    		//Check for empty consents
-    		if(consentBean.getStatement()!=null && consentBean.getStatement().trim().length()>0)
-    		{
-    			consentStatementColl.add(consentTier);
-    		}
-    	}
-    	return consentStatementColl;
-    }
+	/**
+	 * @param consentTierMap
+	 *            Consent Tier Map
+	 * @return consentStatementColl
+	 */
+	public Collection prepareConsentTierCollection(Map consentTierMap)
+	{
+		Collection<ConsentTier> consentStatementColl = new LinkedHashSet<ConsentTier>();// bug
+		// 8905
+		try
+		{
+			final MapDataParser mapdataParser = new MapDataParser("edu.wustl.catissuecore.bean");
+			Map consentMap = CollectionProtocolUtil.sortConsentMap(consentTierMap);// bug 8905
+			final Collection beanObjColl = mapdataParser.generateData(consentMap);// consentTierMap
 
-    /**
-     * Returns message label to display on success add or edit
-     * @return String
-     */
+			// Collection<ConsentTier> consentStatementColl = new
+			// HashSet<ConsentTier>();
+
+			Iterator iter = beanObjColl.iterator();
+			while (iter.hasNext())
+			{
+				ConsentBean consentBean = (ConsentBean) iter.next();
+				ConsentTier consentTier = new ConsentTier();
+				consentTier.setStatement(consentBean.getStatement());
+				// To set ID for Edit case
+				setConsentTierId(consentBean, consentTier);
+				// Check for empty consents
+				if (consentBean.getStatement() != null &&
+						consentBean.getStatement().trim().length() > 0)
+				{
+					consentStatementColl.add(consentTier);
+				}
+			}
+		}
+		catch (Exception excp)
+		{
+			Logger.out.error(excp.getMessage(), excp);
+		}
+		return consentStatementColl;
+	}
+
+	/**
+	 * This method compares the consent tier id and sets it accordingly.
+	 * @param consentBean of ConsentBean type.
+	 * @param consentTier of ConsentTier type.
+	 */
+	private void setConsentTierId(ConsentBean consentBean, ConsentTier consentTier)
+	{
+		if (consentBean.getConsentTierID() != null && consentBean.getConsentTierID().trim().length() > 0)
+		{
+			consentTier.setId(Long.parseLong(consentBean.getConsentTierID()));
+		}
+	}
+
+	/**
+	 * Returns message label to display on success add or edit.
+	 * @return String
+	 */
 	public String getMessageLabel()
 	{
 		return this.title;
 	}
+
 	/**
-	 * @param object For equalizing
+	 * @param object
+	 * For equalizing
 	 * @return boolean
 	 */
 	public boolean equals(Object object)
 	{
 		boolean equals = false;
-    	if(this.getClass().getName().equals(object.getClass().getName()))
-    	{
-    		final CollectionProtocol collectionProtocol = (CollectionProtocol)object;
-    		if(this.getId().longValue() == collectionProtocol.getId().longValue())
-    		{
-    			equals = true;
-    	    }
-    	}
-    	return equals;
-    }
+		if(this.getClass().getName().equals(object.getClass().getName()))
+		{
+			final CollectionProtocol collectionProtocol = (CollectionProtocol) object;
+			if(this.getId().longValue() == collectionProtocol.getId().longValue())
+			{
+				equals = true;
+			}
+		}
+		return equals;
+	}
+
 	/**
-	 * @param object For comparing 
+	 * @param object
+	 *            For comparing
 	 * @return int
 	 */
 	public int compareTo(Object object)
 	{
 		int result = 0;
-    	if(this.getClass().getName().equals(object.getClass().getName()))
-    	{
-    		final CollectionProtocol collectionProtocol = (CollectionProtocol)object;
-    		result = this.getId().compareTo(collectionProtocol.getId());
-    	}
-    	return result;
+		if (this.getClass().getName().equals(object.getClass().getName()))
+		{
+			final CollectionProtocol collectionProtocol = (CollectionProtocol) object;
+			result = this.getId().compareTo(collectionProtocol.getId());
+		}
+		return result;
 	}
+
 	/**
 	 * Method overridden to return hashcode of Id if available.
 	 * @return hashcode
@@ -490,17 +555,17 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	{
 		int hashCode = super.hashCode();
 
-		if(this.getId() != null)
+		if (this.getId() != null)
 		{
 			hashCode = this.getId().hashCode();
 		}
 		return hashCode;
 	}
 
-
 	/**
 	 * @return Returns the aliquotInSameContainer.
-	 * @hibernate.property name="aliquotInSameContainer" type="boolean" column="ALIQUOT_IN_SAME_CONTAINER"
+	 * @hibernate.property name="aliquotInSameContainer" type="boolean"
+	 *                     column="ALIQUOT_IN_SAME_CONTAINER"
 	 */
 	public Boolean getAliquotInSameContainer()
 	{
@@ -508,22 +573,25 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	}
 
 	/**
-	 * @param aliquotInSameContainer The aliquotInSameContainer to set.
+	 * @param aliquotInSameContainer
+	 * The aliquotInSameContainer to set.
 	 */
 	public void setAliquotInSameContainer(Boolean aliquotInSameContainer)
 	{
 		this.aliquotInSameContainer = aliquotInSameContainer;
 	}
 
-	//-Mandar : 25-Jan-07 ---------- start
+	// -Mandar : 25-Jan-07 ---------- start
 	/**
 	 * @return Returns the consentsWaived.
-	 * @hibernate.property name="consentsWaived" type="boolean" column="CONSENTS_WAIVED"
+	 * @hibernate.property name="consentsWaived" type="boolean"
+	 * column="CONSENTS_WAIVED"
 	 */
 	public Boolean getConsentsWaived()
 	{
 		return consentsWaived;
 	}
+
 	/**
 	 * Sets the consent waived value.
 	 * @param consentsWaived Value to be set to the consentsWaived attribute.
@@ -532,30 +600,47 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	{
 		this.consentsWaived = consentsWaived;
 	}
-	//-Mandar : 25-Jan-07 ---------- end
-	
+
+	/**
+	 * Get the type.
+	 * @return String type.
+	 */
 	public String getType()
 	{
 		return type;
 	}
 
+	/**
+	 * Set the collection type.
+	 * @param type of String type.
+	 */
 	public void setType(String type)
 	{
 		this.type = type;
 	}
 
-
+	/**
+	 * Get the Parent Collection Protocol.
+	 * @return CollectionProtocol object.
+	 */
 	public CollectionProtocol getParentCollectionProtocol()
 	{
 		return parentCollectionProtocol;
 	}
 
-
+	/**
+	 * Set the Parent Collection Protocol.
+	 * @param parentCollectionProtocol of CollectionProtocol object.
+	 */
 	public void setParentCollectionProtocol(CollectionProtocol parentCollectionProtocol)
 	{
 		this.parentCollectionProtocol = parentCollectionProtocol;
 	}
 
+	/**
+	 * Get the Child Collection Protocol.
+	 * @return Collection.
+	 */
 	public Collection getChildCollectionProtocolCollection()
 	{
 		return childCollectionProtocolCollection;
@@ -579,7 +664,8 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	}
 
 	/**
-	 * @param sequenceNumber The sequenceNumber to set.
+	 * @param sequenceNumber
+	 * The sequenceNumber to set.
 	 */
 	public void setSequenceNumber(Integer sequenceNumber)
 	{
@@ -595,7 +681,8 @@ public class CollectionProtocol extends SpecimenProtocol implements
 	}
 
 	/**
-	 * @param studyCalendarEventPoint The studyCalendarEventPoint to set.
+	 * @param studyCalendarEventPoint
+	 * The studyCalendarEventPoint to set.
 	 */
 	public void setStudyCalendarEventPoint(Double studyCalendarEventPoint)
 	{
@@ -604,10 +691,13 @@ public class CollectionProtocol extends SpecimenProtocol implements
 
 	/**
 	 * Returns the collection of Users(ProtocolCoordinators) for this Protocol.
-	 * @hibernate.set name="coordinatorCollection" table="CATISSUE_USER_COLLECTION_PROTOCOLS"
-	 * cascade="none" inverse="false" lazy="false"
+	 * @hibernate.set name="coordinatorCollection"
+	 * table="CATISSUE_USER_COLLECTION_PROTOCOLS" cascade="none"
+	 * inverse="false" lazy="false"
 	 * @hibernate.collection-key column="COLLECTION_PROTOCOL_ID"
-	 * @hibernate.collection-many-to-many class="edu.wustl.catissuecore.domain.User" column="USER_ID"
+	 * @hibernate.collection-many-to-many
+	 * class="edu.wustl.catissuecore.domain.User"
+	 * column="USER_ID"
 	 * @return The collection of Users(ProtocolCoordinators) for this Protocol.
 	 */
 	public Collection<User> getAssignedProtocolUserCollection()
@@ -626,10 +716,13 @@ public class CollectionProtocol extends SpecimenProtocol implements
 
 	/**
 	 * Returns the collection of Users(ProtocolCoordinators) for this Protocol.
-	 * @hibernate.set name="coordinatorCollection" table="CATISSUE_SITE_COLLECTION_PROTOCOLS"
-	 * cascade="none" inverse="false" lazy="false"
+	 * @hibernate.set name="coordinatorCollection"
+	 * table="CATISSUE_SITE_COLLECTION_PROTOCOLS" cascade="none"
+	 * inverse="false" lazy="false"
 	 * @hibernate.collection-key column="COLLECTION_PROTOCOL_ID"
-	 * @hibernate.collection-many-to-many class="edu.wustl.catissuecore.domain.Site" column="SITE_ID"
+	 * @hibernate.collection-many-to-many
+	 * class="edu.wustl.catissuecore.domain.Site"
+	 * column="SITE_ID"
 	 * @return The collection of sites for this Protocol.
 	 */
 	public Collection<Site> getSiteCollection()
